[package]
name = "tcp_multiclient"
version = "0.1.0"
authors = ["Cyrille <cypierre58@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3", features = [
	"rt", 
	"net", 
	"stream",
	"rt-multi-thread",
]}
futures = "0.3"
