[package]
name = "tcp_multiclient"
version = "0.2.0"
authors = ["Cyrille <cypierre58@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3", features = [
	"rt", 
	"net", 
	"stream",
	"rt-multi-thread",
	"sync",
	"io-util",
]}
futures = "0.3"
env_logger = "0.8"
log = "0.4"
